beginning to write a simple CLI interface

--- a/data/active/oneTimeTasks.json
+++ b/data/active/oneTimeTasks.json
@@ -1,1 +1,18 @@
-{}
+{
+    "0": {
+        "assignedOn": "Fri May 31 18:30:21 2019",
+        "completeBy": "Sat Jun  1 18:30:21 2019",
+        "priority": "0",
+        "scheduledStart": "Fri May 31 18:30:21 2019",
+        "taskString": "First_Test",
+        "weight": "3"
+    },
+    "1": {
+        "assignedOn": "Fri May 31 18:30:52 2019",
+        "completeBy": "Sat Jun  1 18:30:52 2019",
+        "priority": "0",
+        "scheduledStart": "Fri May 31 18:30:52 2019",
+        "taskString": "Second_Test",
+        "weight": "3"
+    }
+}
