updating task strings works properly; other updates not implemented yet

--- a/data/active/oneTimeTasks.json
+++ b/data/active/oneTimeTasks.json
@@ -92,7 +92,7 @@
         "completeBy": "Fri Jun  7 16:52:29 2019",
         "priority": "0",
         "scheduledStart": "Thu Jun  6 16:52:29 2019",
-        "taskString": "Add EDIT option to habit and task",
+        "taskString": "Test UPDATE option",
         "weight": "3"
     }
 }
