--- a/data/active/oneTimeTasks.json
+++ b/data/active/oneTimeTasks.json
@@ -31,12 +31,20 @@
         "taskString": "add more tests to test newly added Am-I-Better functions",
         "weight": "3"
     },
-    "13": {
-        "assignedOn": "Thu Jun  6 18:17:49 2019",
-        "completeBy": "Fri Jun  7 18:17:49 2019",
+    "12": {
+        "assignedOn": "Thu Jun 13 17:41:43 2019",
+        "completeBy": "Fri Jun 14 17:41:43 2019",
         "priority": "0",
-        "scheduledStart": "Thu Jun  6 18:17:49 2019",
-        "taskString": "start working on the Intelligent Name Checker",
+        "scheduledStart": "Thu Jun 13 17:41:43 2019",
+        "taskString": "get SQL-workbench fixed so that it properly executes queries",
+        "weight": "3"
+    },
+    "13": {
+        "assignedOn": "Thu Jun 13 17:44:20 2019",
+        "completeBy": "Fri Jun 14 17:44:20 2019",
+        "priority": "0",
+        "scheduledStart": "Thu Jun 13 17:44:20 2019",
+        "taskString": "Finish operations PR for Elyah",
         "weight": "3"
     },
     "14": {
@@ -63,20 +71,12 @@
         "taskString": "Model Data from DB",
         "weight": "3"
     },
-    "17": {
-        "assignedOn": "Wed Jun 12 17:45:02 2019",
-        "completeBy": "Thu Jun 13 17:45:02 2019",
+    "19": {
+        "assignedOn": "Thu Jun 13 17:44:58 2019",
+        "completeBy": "Fri Jun 14 17:44:58 2019",
         "priority": "0",
-        "scheduledStart": "Wed Jun 12 17:45:02 2019",
-        "taskString": "Install pandas",
-        "weight": "3"
-    },
-    "18": {
-        "assignedOn": "Wed Jun 12 17:45:06 2019",
-        "completeBy": "Thu Jun 13 17:45:06 2019",
-        "priority": "0",
-        "scheduledStart": "Wed Jun 12 17:45:06 2019",
-        "taskString": "Install numpy",
+        "scheduledStart": "Thu Jun 13 17:44:58 2019",
+        "taskString": "Read Two more chapters of the Rust book",
         "weight": "3"
     },
     "2": {
