--- a/data/completed/oneTimeTasks.json
+++ b/data/completed/oneTimeTasks.json
@@ -54,5 +54,21 @@
         "scheduledStart": "Wed Jun 12 17:45:06 2019",
         "taskString": "Install numpy",
         "weight": "3"
+    },
+    "7": {
+        "assignedOn": "Wed Jun  5 16:55:12 2019",
+        "completeBy": "Thu Jun  6 16:55:12 2019",
+        "priority": "0",
+        "scheduledStart": "Wed Jun  5 16:55:12 2019",
+        "taskString": "check if the new Hard Disk already has bad sectors",
+        "weight": "3"
+    },
+    "8": {
+        "assignedOn": "Wed Jun  5 17:24:26 2019",
+        "completeBy": "Thu Jun  6 17:24:26 2019",
+        "priority": "0",
+        "scheduledStart": "Wed Jun  5 17:24:26 2019",
+        "taskString": "work for 10 pomos",
+        "weight": "3"
     }
 }
