--- a/data/active/oneTimeTasks.json
+++ b/data/active/oneTimeTasks.json
@@ -119,6 +119,14 @@
         "taskString": "migrate to intermediate Trilium version and then the tabs version",
         "weight": "3"
     },
+    "5": {
+        "assignedOn": "Fri Jun 14 17:12:30 2019",
+        "completeBy": "Sat Jun 15 17:12:30 2019",
+        "priority": "0",
+        "scheduledStart": "Fri Jun 14 17:12:30 2019",
+        "taskString": "print tables with python-tabulate",
+        "weight": "3"
+    },
     "7": {
         "assignedOn": "Wed Jun  5 17:24:37 2019",
         "completeBy": "Thu Jun  6 17:24:37 2019",
