--- a/data/completed/oneTimeTasks.json
+++ b/data/completed/oneTimeTasks.json
@@ -7,6 +7,22 @@
         "taskString": "Test UPDATE option",
         "weight": "3"
     },
+    "10": {
+        "assignedOn": "Fri Jun 14 16:05:49 2019",
+        "completeBy": "Sat Jun 15 16:05:49 2019",
+        "priority": "0",
+        "scheduledStart": "Fri Jun 14 16:05:49 2019",
+        "taskString": "Finish Reading the LifeLabs Whitepaper",
+        "weight": "3"
+    },
+    "11": {
+        "assignedOn": "Fri Jun 14 22:50:22 2019",
+        "completeBy": "Sat Jun 15 22:50:22 2019",
+        "priority": "0",
+        "scheduledStart": "Fri Jun 14 22:50:22 2019",
+        "taskString": "dummy task",
+        "weight": "3"
+    },
     "6": {
         "assignedOn": "Wed Jun 12 17:45:06 2019",
         "completeBy": "Thu Jun 13 17:45:06 2019",
@@ -29,6 +45,14 @@
         "priority": "0",
         "scheduledStart": "Wed Jun  5 17:24:26 2019",
         "taskString": "work for 10 pomos",
+        "weight": "3"
+    },
+    "9": {
+        "assignedOn": "Fri Jun 14 22:40:08 2019",
+        "completeBy": "Sat Jun 15 22:40:08 2019",
+        "priority": "0",
+        "scheduledStart": "Fri Jun 14 22:40:08 2019",
+        "taskString": "sign and send retainer to KPMG law",
         "weight": "3"
     }
 }
