Habits should now refresh according to refresh rate

--- a/data/active/oneTimeTasks.json
+++ b/data/active/oneTimeTasks.json
@@ -119,6 +119,14 @@
         "taskString": "dummy task 5",
         "weight": "3"
     },
+    "22": {
+        "assignedOn": "Mon Jun 17 16:32:20 2019",
+        "completeBy": "Tue Jun 18 16:32:20 2019",
+        "priority": "0",
+        "scheduledStart": "Mon Jun 17 16:32:20 2019",
+        "taskString": "check in your other computer if you have patched the delete error",
+        "weight": "3"
+    },
     "3": {
         "assignedOn": "Fri Jun 14 22:47:04 2019",
         "completeBy": "Sat Jun 15 22:47:04 2019",
