--- a/data/completed/oneTimeTasks.json
+++ b/data/completed/oneTimeTasks.json
@@ -23,6 +23,22 @@
         "taskString": "dummy task",
         "weight": "3"
     },
+    "12": {
+        "assignedOn": "Thu Jun  6 17:17:30 2019",
+        "completeBy": "Fri Jun  7 17:17:30 2019",
+        "priority": "0",
+        "scheduledStart": "Thu Jun  6 17:17:30 2019",
+        "taskString": "add refreshing mechanism to habits",
+        "weight": "3"
+    },
+    "13": {
+        "assignedOn": "Fri Jun  7 20:46:20 2019",
+        "completeBy": "Sat Jun  8 20:46:20 2019",
+        "priority": "0",
+        "scheduledStart": "Fri Jun  7 20:46:20 2019",
+        "taskString": "install RubyMine Pycharm IntetelliJ Rust Ruby Crystal JDK on new computer",
+        "weight": "3"
+    },
     "6": {
         "assignedOn": "Wed Jun 12 17:45:06 2019",
         "completeBy": "Thu Jun 13 17:45:06 2019",
