--- a/data/active/oneTimeTasks.json
+++ b/data/active/oneTimeTasks.json
@@ -15,20 +15,44 @@
         "taskString": "schedule a meeting with DueDil",
         "weight": "3"
     },
-    "11": {
-        "assignedOn": "Thu Jun  6 17:20:30 2019",
-        "completeBy": "Fri Jun  7 17:20:30 2019",
+    "10": {
+        "assignedOn": "Wed Jun 19 19:37:20 2019",
+        "completeBy": "Thu Jun 20 19:37:20 2019",
         "priority": "0",
-        "scheduledStart": "Thu Jun  6 17:20:30 2019",
-        "taskString": "add more tests to test newly added Am-I-Better functions",
+        "scheduledStart": "Wed Jun 19 19:37:20 2019",
+        "taskString": "install tokei on new laptop",
+        "weight": "3"
+    },
+    "11": {
+        "assignedOn": "Wed Jun 19 19:52:19 2019",
+        "completeBy": "Thu Jun 20 19:52:19 2019",
+        "priority": "0",
+        "scheduledStart": "Wed Jun 19 19:52:19 2019",
+        "taskString": "talk to Sal about Salary increase",
         "weight": "3"
     },
     "12": {
-        "assignedOn": "Thu Jun 13 17:41:43 2019",
-        "completeBy": "Fri Jun 14 17:41:43 2019",
+        "assignedOn": "Thu Jun 20 19:55:16 2019",
+        "completeBy": "Fri Jun 21 19:55:16 2019",
         "priority": "0",
-        "scheduledStart": "Thu Jun 13 17:41:43 2019",
-        "taskString": "get SQL-workbench fixed so that it properly executes queries",
+        "scheduledStart": "Thu Jun 20 19:55:16 2019",
+        "taskString": "fix Am-I-Better merge conflicts on the other computer",
+        "weight": "3"
+    },
+    "13": {
+        "assignedOn": "Thu Jun 20 20:04:59 2019",
+        "completeBy": "Fri Jun 21 20:04:59 2019",
+        "priority": "0",
+        "scheduledStart": "Thu Jun 20 20:04:59 2019",
+        "taskString": "",
+        "weight": "3"
+    },
+    "14": {
+        "assignedOn": "Thu Jun 20 20:06:10 2019",
+        "completeBy": "Fri Jun 21 20:06:10 2019",
+        "priority": "0",
+        "scheduledStart": "Thu Jun 20 20:06:10 2019",
+        "taskString": "remove Elyah from your slack dashboard and log out",
         "weight": "3"
     },
     "15": {
@@ -47,6 +71,22 @@
         "taskString": "Model Data from DB",
         "weight": "3"
     },
+    "17": {
+        "assignedOn": "Thu Jun 20 20:06:52 2019",
+        "completeBy": "Fri Jun 21 20:06:52 2019",
+        "priority": "0",
+        "scheduledStart": "Thu Jun 20 20:06:52 2019",
+        "taskString": "fix Trilium migration bugs",
+        "weight": "3"
+    },
+    "18": {
+        "assignedOn": "Thu Jun 20 20:12:52 2019",
+        "completeBy": "Fri Jun 21 20:12:52 2019",
+        "priority": "99",
+        "scheduledStart": "Thu Jun 20 20:12:52 2019",
+        "taskString": "this is a new string",
+        "weight": "1"
+    },
     "19": {
         "assignedOn": "Thu Jun 13 17:44:58 2019",
         "completeBy": "Fri Jun 14 17:44:58 2019",
@@ -56,19 +96,27 @@
         "weight": "3"
     },
     "2": {
-        "assignedOn": "Tue Jun 18 20:27:25 2019",
-        "completeBy": "Wed Jun 19 20:27:25 2019",
+        "assignedOn": "Thu Jun 20 19:47:12 2019",
+        "completeBy": "Fri Jun 21 19:47:12 2019",
         "priority": "0",
-        "scheduledStart": "Tue Jun 18 20:27:25 2019",
-        "taskString": "take document printouts from 123stores and fill them out",
+        "scheduledStart": "Thu Jun 20 19:47:12 2019",
+        "taskString": "delete taskwarrior from the 123stores laptop",
+        "weight": "3"
+    },
+    "20": {
+        "assignedOn": "Thu Jun 20 20:18:44 2019",
+        "completeBy": "Fri Jun 21 20:18:44 2019",
+        "priority": "0",
+        "scheduledStart": "Thu Jun 20 20:18:44 2019",
+        "taskString": "remove bookmarks from Google chrome and firefox for the 123stores computer",
         "weight": "3"
     },
     "3": {
-        "assignedOn": "Fri Jun 14 22:47:04 2019",
-        "completeBy": "Sat Jun 15 22:47:04 2019",
+        "assignedOn": "Wed Jun 19 19:39:48 2019",
+        "completeBy": "Thu Jun 20 19:39:48 2019",
         "priority": "0",
-        "scheduledStart": "Fri Jun 14 22:47:04 2019",
-        "taskString": "talk to Amri about working out a plan",
+        "scheduledStart": "Wed Jun 19 19:39:48 2019",
+        "taskString": "delete everything personal from the 123stores laptop",
         "weight": "3"
     },
     "4": {
