#33 implemented inactive tasks queue; marking active tasks as inactive works

--- a/data/completed/oneTimeTasks.json
+++ b/data/completed/oneTimeTasks.json
@@ -87,6 +87,14 @@
         "taskString": "fill out the Immigration forms",
         "weight": "3"
     },
+    "21": {
+        "assignedOn": "Thu Jun 20 20:06:10 2019",
+        "completeBy": "Fri Jun 21 20:06:10 2019",
+        "priority": "0",
+        "scheduledStart": "Thu Jun 20 20:06:10 2019",
+        "taskString": "remove Elyah from your slack dashboard and log out",
+        "weight": "3"
+    },
     "6": {
         "assignedOn": "Wed Jun 12 17:45:06 2019",
         "completeBy": "Thu Jun 13 17:45:06 2019",
