did some refactoring; generalized some specialized functions. Need more tests

--- a/data/inactive/oneTimeTasks.json
+++ b/data/inactive/oneTimeTasks.json
@@ -30,5 +30,13 @@
         "scheduledStart": "Fri Jun  7 17:19:17 2019",
         "taskString": "clean up debugging prints",
         "weight": "3"
+    },
+    "5": {
+        "assignedOn": "Mon Jun 24 00:12:14 2019",
+        "completeBy": "Tue Jun 25 00:12:14 2019",
+        "priority": "0",
+        "scheduledStart": "Mon Jun 24 00:12:14 2019",
+        "taskString": "open all your mega accounts to keep them valid",
+        "weight": "3"
     }
 }
