--- a/data/active/oneTimeTasks.json
+++ b/data/active/oneTimeTasks.json
@@ -1,4 +1,12 @@
 {
+    "0": {
+        "assignedOn": "Mon Jun 24 02:22:58 2019",
+        "completeBy": "Tue Jun 25 02:22:58 2019",
+        "priority": "0",
+        "scheduledStart": "Mon Jun 24 02:22:58 2019",
+        "taskString": "delete thunderbird from qomputer",
+        "weight": "3"
+    },
     "1": {
         "assignedOn": "Fri Jun 14 22:43:28 2019",
         "completeBy": "Sat Jun 15 22:43:28 2019",
