--- a/data/active/oneTimeTasks.json
+++ b/data/active/oneTimeTasks.json
@@ -1,4 +1,12 @@
 {
+    "0": {
+        "assignedOn": "Wed Jun 26 16:08:18 2019",
+        "completeBy": "Thu Jun 27 16:08:18 2019",
+        "priority": "7",
+        "scheduledStart": "Wed Jun 26 16:08:18 2019",
+        "taskString": "sit with Amri and finish all the exit procedures",
+        "weight": "4"
+    },
     "17": {
         "assignedOn": "Thu Jun 20 20:06:52 2019",
         "completeBy": "Fri Jun 21 20:06:52 2019",
