--- a/data/active/oneTimeTasks.json
+++ b/data/active/oneTimeTasks.json
@@ -1,18 +1,26 @@
 {
     "0": {
-        "assignedOn": "Wed Jun 26 16:08:18 2019",
-        "completeBy": "Thu Jun 27 16:08:18 2019",
-        "priority": "7",
-        "scheduledStart": "Wed Jun 26 16:08:18 2019",
-        "taskString": "sit with Amri and finish all the exit procedures",
-        "weight": "4"
-    },
-    "3": {
-        "assignedOn": "Wed Jun 19 19:39:48 2019",
-        "completeBy": "Thu Jun 20 19:39:48 2019",
+        "assignedOn": "Sun Jun 30 14:24:53 2019",
+        "completeBy": "Mon Jul  1 14:24:53 2019",
         "priority": "0",
-        "scheduledStart": "Wed Jun 19 19:39:48 2019",
-        "taskString": "delete everything personal from the 123stores laptop",
+        "scheduledStart": "Sun Jun 30 14:24:53 2019",
+        "taskString": "send signatures to 123stores",
+        "weight": "3"
+    },
+    "1": {
+        "assignedOn": "Sun Jun 30 14:26:46 2019",
+        "completeBy": "Mon Jul  1 14:26:46 2019",
+        "priority": "0",
+        "scheduledStart": "Sun Jun 30 14:26:46 2019",
+        "taskString": "alter the function key functionality on qomputer",
+        "weight": "3"
+    },
+    "2": {
+        "assignedOn": "Sun Jun 30 14:27:09 2019",
+        "completeBy": "Mon Jul  1 14:27:09 2019",
+        "priority": "0",
+        "scheduledStart": "Sun Jun 30 14:27:09 2019",
+        "taskString": "complete the task for lifelabs",
         "weight": "3"
     }
 }
