--- a/data/completed/oneTimeTasks.json
+++ b/data/completed/oneTimeTasks.json
@@ -143,6 +143,22 @@
         "taskString": "fix Trilium migration bugs",
         "weight": "3"
     },
+    "28": {
+        "assignedOn": "Wed Jun 19 19:39:48 2019",
+        "completeBy": "Thu Jun 20 19:39:48 2019",
+        "priority": "0",
+        "scheduledStart": "Wed Jun 19 19:39:48 2019",
+        "taskString": "delete everything personal from the 123stores laptop",
+        "weight": "3"
+    },
+    "29": {
+        "assignedOn": "Wed Jun 26 16:08:18 2019",
+        "completeBy": "Thu Jun 27 16:08:18 2019",
+        "priority": "7",
+        "scheduledStart": "Wed Jun 26 16:08:18 2019",
+        "taskString": "sit with Amri and finish all the exit procedures",
+        "weight": "4"
+    },
     "6": {
         "assignedOn": "Wed Jun 12 17:45:06 2019",
         "completeBy": "Thu Jun 13 17:45:06 2019",
