--- a/data/active/oneTimeTasks.json
+++ b/data/active/oneTimeTasks.json
@@ -18,9 +18,33 @@
     "2": {
         "assignedOn": "Sun Jun 30 14:27:09 2019",
         "completeBy": "Mon Jul  1 14:27:09 2019",
-        "priority": "0",
+        "priority": "7",
         "scheduledStart": "Sun Jun 30 14:27:09 2019",
         "taskString": "complete the task for lifelabs",
+        "weight": "10"
+    },
+    "3": {
+        "assignedOn": "Thu Jul  4 09:09:08 2019",
+        "completeBy": "Fri Jul  5 09:09:08 2019",
+        "priority": "6",
+        "scheduledStart": "Thu Jul  4 09:09:08 2019",
+        "taskString": "support for marking inactive tasks as active",
+        "weight": "7"
+    },
+    "4": {
+        "assignedOn": "Thu Jul  4 09:16:18 2019",
+        "completeBy": "Fri Jul  5 09:16:18 2019",
+        "priority": "0",
+        "scheduledStart": "Thu Jul  4 09:16:18 2019",
+        "taskString": "make a list of all the things to buy",
+        "weight": "3"
+    },
+    "5": {
+        "assignedOn": "Thu Jul  4 09:17:34 2019",
+        "completeBy": "Fri Jul  5 09:17:34 2019",
+        "priority": "0",
+        "scheduledStart": "Thu Jul  4 09:17:34 2019",
+        "taskString": "fix the stretched desktop wallpaper issue on qomputer",
         "weight": "3"
     }
 }
